--- a/MADNET_SDK_DEMO/MADNET_SDK_DEMO-Info.plist
+++ b/MADNET_SDK_DEMO/MADNET_SDK_DEMO-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>ru.i-sys.tinkoffdigital.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>ru.i-sys.admeedemo</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
